updated to show new projects

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="container">
             <h2>My Work</h2>
             <div class="work-item">
-                <a href="https://opalsnellneberger.github.io/Module-1-Challenge/" target=”_blank”><img src="./assets/images/work1.png" alt="A picture of a website that uses search engine optimization"></a>
-                <p>This was a project where I refactored the HTML and CSS of this site to better imporve search engine optimization and readability.</p>
+                <a href="https://mathilde-01.github.io/luna-sleep-tracker/" target=”_blank”><img src="./assets/images/luna-website.png" alt="Luna Homepage"></a>
+                <p>This is Luna a site devoted to helping you understand your sleep and how the outside world affects it.</p>
             </div>
             <div class="work-item">
                 <a href="#" target=”_blank”><img src="./assets/images/work2.jpg" alt="Work 2"></a>
