update for project 2

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <p>This is Luna a site devoted to helping you understand your sleep and how the outside world affects it.</p>
             </div>
             <div class="work-item">
-                <a href="#" target=”_blank”><img src="./assets/images/work2.jpg" alt="Work 2"></a>
-                <p>Project 2 description goes here.</p>
+                <a href="https://city-glimpse-b7a1c6803ac1.herokuapp.com/Links to an external site." target=”_blank”><img src="./assets/images/MapSS.png" alt="City Glimps"></a>
+                <p>City Glimps is a place to discover review and save resteraunts</p>
             </div>
             <!-- Add more work items as needed -->
         </div>
